--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -11,7 +11,6 @@
   selected = {false},
   title        = {Learning Hierarchical Features with Joint Latent Space Energy-Based Prior},
   abstract = {This paper studies the fundamental problem of multilayer generator models in learning hierarchical representations. The multi-layer generator model that consists of multiple layers of latent variables organized in a top-down architecture tends to learn multiple levels of data abstraction. However, such multi-layer latent variables are typically parameterized to be Gaussian, which can be less informative in capturing complex abstractions, resulting in limited success in hierarchical representation learning. On the other hand, the energy-based (EBM) prior is known to be expressive in capturing the data regularities, but it often lacks the hierarchical structure to capture different levels of hierarchical representations. In this paper, we propose a joint latent space EBM prior model with multi-layer latent variables for effective hierarchical representation learning. We develop a variational joint learning scheme that seamlessly integrates an inference model for efficient inference. Our experiments demonstrate that the proposed joint EBM prior is effective and expressive in capturing hierarchical representations and modelling data distribution.},
-  bibtex_show = {false},
   booktitle    = {{IEEE} International Conference on Computer Vision (ICCV)},
   year         = {2023},
 }
@@ -315,6 +314,26 @@ On the other hand, ConvNet potentials learned with non-convergent MCMC do not ha
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 
+@inproceedings{DBLP:conf/wacv/HanLWXW19,
+  author       = {Tian Han and
+                  Yang Lu and
+                  Jiawen Wu and
+                  Xianglei Xing and
+                  Ying Nian Wu},
+  title        = {Learning Generator Networks for Dynamic Patterns},
+  abstract = {We address the problem of learning dynamic patterns from unlabeled video sequences, either in the form of generating new video sequences, or recovering incomplete video sequences. This problem is challenging because the appearances and motions in the video sequences can be very complex. We propose to use the alternating back-propagation algorithm to learn the generator network with the spatial-temporal convolutional architecture. The proposed method is efficient and flexible. It can not only generate realistic video sequences, but can also recover the incomplete video sequences in the testing stage or even in the learning stage. The proposed algorithm can be further improved by using learned initialization which is useful for the recovery tasks. Further, the proposed algorithm can naturally help to learn the shared representation between different modalities. Our experiments show that our method is competitive with the existing state of the art methods both qualitatively and quantitatively.},
+  pdf = {https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=8659204&casa_token=LH2ooDRKYv0AAAAA:Mvlk6RkBh8WPA-nSxYTlHKULyZtv9ln-_qEjxRASVeqXDD1BCbfxbci7r0VpEznzF9Og-BjN},
+  bibtex_show = {true},
+  booktitle    = {{IEEE} Winter Conference on Applications of Computer Vision (WACV)},
+  pages        = {809--818},
+  publisher    = {{IEEE}},
+  year         = {2019},
+  url          = {https://doi.org/10.1109/WACV.2019.00091},
+  doi          = {10.1109/WACV.2019.00091},
+  timestamp    = {Fri, 13 Dec 2019 17:13:56 +0100},
+  biburl       = {https://dblp.org/rec/conf/wacv/HanLWXW19.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
 
 @inproceedings{HanWW18,
   author       = {Tian Han and
