--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -321,6 +321,7 @@ On the other hand, ConvNet potentials learned with non-convergent MCMC do not ha
                   Xianglei Xing and
                   Ying Nian Wu},
   title        = {Learning Generator Networks for Dynamic Patterns},
+  abbr = {WACV},
   abstract = {We address the problem of learning dynamic patterns from unlabeled video sequences, either in the form of generating new video sequences, or recovering incomplete video sequences. This problem is challenging because the appearances and motions in the video sequences can be very complex. We propose to use the alternating back-propagation algorithm to learn the generator network with the spatial-temporal convolutional architecture. The proposed method is efficient and flexible. It can not only generate realistic video sequences, but can also recover the incomplete video sequences in the testing stage or even in the learning stage. The proposed algorithm can be further improved by using learned initialization which is useful for the recovery tasks. Further, the proposed algorithm can naturally help to learn the shared representation between different modalities. Our experiments show that our method is competitive with the existing state of the art methods both qualitatively and quantitatively.},
   pdf = {https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=8659204&casa_token=LH2ooDRKYv0AAAAA:Mvlk6RkBh8WPA-nSxYTlHKULyZtv9ln-_qEjxRASVeqXDD1BCbfxbci7r0VpEznzF9Og-BjN},
   bibtex_show = {true},
