--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -14,7 +14,7 @@
   year         = {2023}
 }
 
-@InProceedings{Cui_2023_ICCV,
+@inproceedings{Cui_2023_ICCV,
     author    = {Cui, Jiali and Wu, Ying Nian and Han, Tian},
     abbr = {ICCV},
     selected = {false},
