--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,11 +3,22 @@
 
 @string{aps = {American Physical Society,}}
 
+@inproceedings{Li_2024,
+  author       = {Hanao Li and
+                  Tian Han},
+  abbr = {WACV},
+  selected = {false},
+  title        = {Enforcing Sparsity on Latent Space for Robust and Explainable Representations},
+  abstract = {Recently, dense latent variable models have shown promising results, but their distributed and potentially redundant codes make them less interpretable and less robust to noise. On the other hand, sparse representations are more parsimonious, providing better explainability and noise robustness, but it is difficult to enforce sparsity due to the complexity and computational cost involved. In this paper, we propose a novel unsupervised learning approach to enforce sparsity on the latent space for the generator model, utilizing a gradually sparsified spike and slab distribution as our prior. Our model is composed of a top-down generator network that maps the latent variable to the observations. We use maximum likelihood sampling to infer latent variables in the generator's posterior direction, and spike and slab regularization in the inference stage can induce sparsity by pushing non-informative latent dimensions toward zero. Our experiments show that the learned sparse latent representations preserve the majority of the information, and our model can learn disentangled semantics, increase the explainability of the latent codes, and enhance the robustness of the classification and denoising tasks.},
+  booktitle    = {IEEE/CVF Winter Conference on Applications of Computer Vision (WACV)},
+  year         = {2024}
+}
+
 @inproceedings{CuiW023b,
   author       = {Jiali Cui and
                   Tian Han},
   abbr = {NeurIPS},
-  selected = {false},
+  selected = {true},
   title        = {Learning Energy-based Model via Dual-MCMC Teaching},
   abstract = {This paper studies the fundamental learning problem of the energy-based model (EBM). Learning the EBM can be achieved using the maximum likelihood estimation (MLE), which typically involves the Markov Chain Monte Carlo (MCMC) sampling, such as the Langevin dynamics. However, the noise-initialized Langevin dynamics can be challenging in practice and hard to mix. This motivates the exploration of joint training with the generator model where the generator model serves as a complementary model to bypass MCMC sampling. However, such a method can be less accurate than the MCMC and result in biased EBM learning. While the generator can also serve as an initializer model for better MCMC sampling, its learning can be biased since it only matches the EBM and has no access to empirical training examples. Such biased generator learning may limit the potential of learning the EBM. To address this issue, we present a joint learning framework that interweaves the maximum likelihood learning algorithm for both the EBM and the complementary generator model. In particular, the generator model is learned by MLE to match both the EBM and the empirical data distribution, making it a more informative initializer for MCMC sampling of EBM. Learning generator with observed examples typically requires inference of the generator posterior. To ensure accurate and efficient inference, we adopt the MCMC posterior sampling and introduce a complementary inference model to initialize such latent MCMC sampling. We show that three separate models can be seamlessly integrated into our joint framework through two (dual-) MCMC teaching, enabling effective and efficient EBM learning.},
   booktitle    = {Advances in Neural Information Processing Systems (NeurIPS) },
