--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,20 @@
 
 @string{aps = {American Physical Society,}}
 
+@inproceedings{Cheng_2024,
+  author       = {Xu Cheng and
+                  Lei Cheng and
+                  Zhaoran Peng and
+                  Yang Xu and
+                  Tian Han and
+                  Quanshi Zhang},
+  abbr = {ICML},
+  selected = {false},
+  title        = {Layerwise Change of Knowledge in Neural Networks},
+  booktitle    = {International Conference on Machine Learning (ICML)},
+  year         = {2024}
+}
+
 @inproceedings{Yuan_2024,
   author       = {Shiyu Yuan and
                   Carlo Lipizzi and
