--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,32 @@
 
 @string{aps = {American Physical Society,}}
 
+@inproceedings{Cui_2024,
+  author       = {Jiali Cui and
+                  Tian Han},
+  abbr = {ICML},
+  selected = {false},
+  title        = {Learning Latent Space Hierarchical EBM Diffusion Models},
+  booktitle    = {International Conference on Machine Learning (ICML)},
+  year         = {2024}
+}
+
+
+@inproceedings{geng_2024,
+  author       = {Cong Geng and
+                  Tian Han and
+                  Peng-Tao Jiang and
+                  Hao Zhang and
+                  Jinwei Chen and
+                  Soren Hauberg and
+                  Bo Li},
+  abbr = {ICML},
+  selected = {false},
+  title        = {Improving Adversarial Energy-Based Model via Diffusion Process},
+  booktitle    = {International Conference on Machine Learning (ICML)},
+  year         = {2024}
+}
+
 @inproceedings{Cheng_2024,
   author       = {Xu Cheng and
                   Lei Cheng and
